@@ -1,26 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.holixon.axon.testing</groupId>
   <artifactId>axon-server-testcontainer</artifactId>
   <version>0.0.1</version>
-  <name>${project.artifactId}</name>
-  <url>https://github.com/toolisticon/${project.artifactId}/</url>
+  <name>axon-server-testcontainer</name>
+  <description>Testcontainer for Axon Server</description>
+  <url>https://github.com/holixon/axon-server-testcontainer/</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
     <kotlin.version>1.5.31</kotlin.version>
     <java.version>11</java.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <testcontainers.version>1.16.2</testcontainers.version>
     <kotlin-logging.version>2.0.11</kotlin-logging.version>
     <spring-boot.version>2.5.6</spring-boot.version>
     <axon-bom.version>4.5.5</axon-bom.version>
+    <junit.version>5.8.1</junit.version>
   </properties>
 
   <dependencyManagement>
@@ -57,7 +54,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.8.1</version>
+        <version>${junit.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -67,7 +64,7 @@
   <dependencies>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <artifactId>kotlin-stdlib</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -77,6 +74,18 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.microutils</groupId>
+      <artifactId>kotlin-logging-jvm</artifactId>
+      <version>${kotlin-logging.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <!-- TEST -->
@@ -95,19 +104,6 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>io.github.microutils</groupId>
-      <artifactId>kotlin-logging-jvm</artifactId>
-      <version>${kotlin-logging.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <optional>true</optional>
-    </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -179,9 +175,9 @@
               </goals>
             </execution>
             <execution>
-              <id>pre-integration-test</id>
+              <id>report</id>
               <goals>
-                <goal>prepare-agent-integration</goal>
+                <goal>report</goal>
               </goals>
             </execution>
           </executions>
@@ -193,8 +189,10 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
           <configuration>
-            <encoding>${project.build.sourceEncoding}</encoding>
-            <release>11</release>
+            <encoding>UTF-8</encoding>
+            <release>${java.version}</release>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
           </configuration>
           <executions>
             <!-- Replacing default-compile as it is treated specially by maven -->
@@ -235,14 +233,10 @@
               <plugin>spring</plugin>
               <plugin>no-arg</plugin>
               <plugin>all-open</plugin>
-              <!--plugin>jpa</plugin-->
             </compilerPlugins>
             <pluginOptions>
-              <!-- Each annotation is placed on its own line -->
-              <!--              <option>all-open:annotation=com.tngtech.jgiven.integration.spring.JGivenStage</option>-->
             </pluginOptions>
           </configuration>
-
           <executions>
             <execution>
               <id>compile</id>
@@ -298,14 +292,14 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.2</version>
           <configuration>
+            <encoding>UTF-8</encoding>
             <useSystemClassLoader>false</useSystemClassLoader>
             <shutdown>kill</shutdown>
             <runOrder>random</runOrder>
-            <argLine>--illegal-access=permit -Djava.awt.headless=true ${argLine} -XX:+StartAttachListener -Xmx1024m -XX:MaxPermSize=256m
-            </argLine>
-            <systemPropertyVariables>
-              <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
-            </systemPropertyVariables>
+            <argLine>--illegal-access=permit -Djava.awt.headless=true ${argLine} -XX:+StartAttachListener</argLine>
+            <excludes>
+              <exclude>**/*ITest.*</exclude>
+            </excludes>
           </configuration>
         </plugin>
 
@@ -314,10 +308,19 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.22.2</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+              </goals>
+            </execution>
+          </executions>
           <configuration>
-            <argLine>
-              --illegal-access=permit
-            </argLine>
+            <encoding>UTF-8</encoding>
+            <argLine>--illegal-access=permit</argLine>
+            <includes>
+              <include>**/*ITest.*</include>
+            </includes>
           </configuration>
         </plugin>
 
@@ -337,10 +340,6 @@
           </executions>
           <configuration>
             <jdkVersion>11</jdkVersion>
-            <!--includes>
-              <include>packages.md</include>
-              <include>extra.md</include>
-            </includes-->
             <reportUndocumented>false</reportUndocumented>
             <skipEmptyPackages>true</skipEmptyPackages>
           </configuration>
@@ -420,6 +419,7 @@
             <useSnapshotInRelease>true</useSnapshotInRelease>
             <keepBranch>false</keepBranch>
             <pushRemote>true</pushRemote>
+            <verbose>true</verbose>
           </configuration>
         </plugin>
 
@@ -429,7 +429,6 @@
           <artifactId>maven-gpg-plugin</artifactId>
           <version>3.0.1</version>
           <configuration>
-            <keyname>${gpg.keyname}</keyname>
             <gpgArguments>
               <arg>--batch</arg>
               <arg>--yes</arg>
@@ -450,8 +449,9 @@
 
         <!-- Deploy -->
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>2.8.2</version>
           <configuration>
             <skip>true</skip>
           </configuration>
@@ -484,6 +484,15 @@
           <version>2.5.2</version>
         </plugin>
 
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <generateBackupPoms>false</generateBackupPoms>
+          </configuration>
+        </plugin>
+
         <!-- Enforce -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -497,8 +506,11 @@
               </goals>
               <configuration>
                 <rules>
+                  <requireJavaVersion>
+                    <version>${java.version}</version>
+                  </requireJavaVersion>
                   <requireMavenVersion>
-                    <version>3.8.0</version>
+                    <version>3.6.0</version>
                   </requireMavenVersion>
                 </rules>
               </configuration>
@@ -515,46 +527,11 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
-        <version>${kotlin.version}</version>
-        <executions>
-          <execution>
-            <id>compile</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>test-compile</id>
-            <phase>test-compile</phase>
-            <goals>
-              <goal>test-compile</goal>
-            </goals>
-          </execution>
-        </executions>
-        <dependencies>
-          <!--          <dependency>-->
-          <!--            <groupId>org.jetbrains.kotlin</groupId>-->
-          <!--            <artifactId>kotlin-stdlib-jdk8</artifactId>-->
-          <!--            <version>${kotlin.version}</version>-->
-          <!--          </dependency>-->
-        </dependencies>
-        <configuration>
-          <jvmTarget>1.8</jvmTarget>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jetbrains.dokka</groupId>
-        <artifactId>dokka-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
@@ -573,16 +550,16 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+          </plugin>
+          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
           </plugin>
           <plugin>
             <groupId>org.jetbrains.dokka</groupId>
             <artifactId>dokka-maven-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -595,26 +572,52 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>itest</id>
+      <build>
+        <defaultGoal>integration-test failsafe:verify</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>true</skipTests>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
 
   <scm>
-    <connection>scm:git:git@github.com:toolisticon/${project.artifactId}.git</connection>
-    <url>scm:git:git@github.com:toolisticon/${project.artifactId}.git</url>
-    <developerConnection>scm:git:git@github.com:toolisticon/${project.artifactId}.git</developerConnection>
+    <connection>scm:git:git@github.com:holixon/axon-server-testcontainer.git</connection>
+    <url>scm:git:git@github.com:holixon/axon-server-testcontainer.git</url>
+    <developerConnection>scm:git:git@github.com:holixon/axon-server-testcontainer.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
     <site>
       <id>README</id>
-      <url>https://github.com/toolisticon/${project.artifactId}</url>
+      <url>https://github.com/holixon/axon-server-testcontainer/blob/develop/README.md</url>
     </site>
     <snapshotRepository>
       <id>ossrh</id>
@@ -628,10 +631,21 @@
 
   <developers>
     <developer>
+      <id>jangalinski</id>
       <name>Jan Galinski</name>
       <roles>
         <role>Product Owner</role>
         <role>Developer</role>
+      </roles>
+      <organization>Holisticon AG</organization>
+      <organizationUrl>https://holisticon.de</organizationUrl>
+    </developer>
+    <developer>
+      <id>zambrovski</id>
+      <name>Simon Zmbrovski</name>
+      <roles>
+        <role>Developer</role>
+        <role>Toolsmith</role>
       </roles>
       <organization>Holisticon AG</organization>
       <organizationUrl>https://holisticon.de</organizationUrl>
